<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDo</string>
    <string name="action_settings">Settings</string>

    <!-- Label -->
    <string name="lblTelefone">Telefone:</string>
    <string name="lblSenha">Senha:</string>
    <string name="lblUsuarioNaoCadastrado">Não Cadastrado?</string>
    <string name="lblEmail">Email:</string>
    <string name="lblNome">Nome:</string>
    <string name="lblObservacao">Observação:</string>
    <string name="lblDataFinalizacao">Data Finalização:</string>

    <!-- Button -->
    <string name="btnLogin">Login</string>
    <string name="btnOk">OK</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnAdicionarTarefa">+</string>

    <!-- Titulo activity -->
    <string name="title_activity_cadastrar_usuario">ToDo - Cadastrar Usuário</string>
    <string name="title_activity_lista_tarefas">ToDo - Tarefas</string>
    <string name="title_activity_cadastrar_tarefa">ToDo - Cadastrar Tarefa</string>
    <string name="title_activity_activity_finalizar_tarefa">ToDo - Editar Tarefa</string>

    <!-- Checkbox -->
    <string name="ckbNotificar">Notificar?</string>
    <string name="ckbFinalizarTarefa">Finalizar?</string>
    
    <!-- descrição imagem -->
    <string name="sinc">sinc</string>

</resources>